# docker

./: .gitignore  Makefile  docker-compose.yaml  docker_dev_build.py  pyproject.toml
.github/workflows/: build-image.yml  build-on-push.yml  build-on-schedule.yml  release-package.yml
demo/: README.md  docker-compose.yaml
demo/api/: .env-template  .env.test  Dockerfile  Dockerfile.test  Makefile  README.md  manage.py  pyproject.toml
demo/api/bdd/: test_utils.py
demo/api/bdd/_infrastructure/: docker-compose-e2e.yaml  docker-compose-run.yaml
demo/api/bdd/features/: smoke-test.feature
demo/api/bdd/fixtures/: data.py  front.py  visual_regression.py
demo/api/bdd/performance/: locustfile.py  test_performance.sh
demo/api/bdd/report/: reporter.py  utils.py
demo/api/bdd/step_definitions/: common_given.py  common_then.py
demo/api/bdd/utils/: data_utils.py
demo/api/docker_demo/apps/health/: checks.py  models.py  resolver.py  tasks.py
demo/api/docker_demo/apps/health/templates/health/: base.html  status.html
demo/api/docker_demo/apps/people/migrations/: 0001_initial.py
demo/api/docker_demo/django/: asgi.py  celery.py  routing.py  settings.py  urls.py  wsgi.py
demo/api/src/docker_demo/core/migrations/: 0001_initial.py
demo/api/src/docker_demo/django/: asgi.py  celery.py  settings.py  urls.py
demo/front/: Dockerfile  README.md  nuxt.config.js  package-lock.json  package.json
demo/front/src/: hooks.server.ts
demo/front/src/lib/styles/: README.md
demo/front/src/lib/styles/abstracts/: README.md
demo/front/src/lib/styles/base/: README.md
demo/front/src/lib/utils/: access_log.ts  fetchUtils.test.ts  fetchUtils.ts
image/: Dockerfile  install_python.sh  sources.list
src/model_w/docker/: config.py  serve.py
