[tool.poetry]
name = "docker_demo"
version = "0.1.0"
description = ""
authors = ["Rémy Sanchez <remy.sanchez@hyperthese.net>"]
license = "Proprietary"

packages = [
    {include = "docker_demo"},
]

[tool.poetry.dependencies]
python = "~3.11"
modelw-preset-django = {extras = ["celery", "channels"], version = ">=2023.7.0,<2023.8.0", allow-prereleases = true}
drf-spectacular = {extras = ["sidecar"], version = "^0.26.2"}

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
ipython = "*"

[tool.isort]
profile = "black"
known_first_party = "docker_demo"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
