[tool.poetry]
name = "docker_demo"
version = "0.1.0"
description = ""
authors = ["Dave O'Neill <david.oneill@with-madrid.com>"]
license = "Proprietary"

packages = [
    {include = "docker_demo"},
]

[tool.poetry.dependencies]
python = "~3.11"
modelw-preset-django = {extras = ["health", "celery", "channels"], version = ">=2024.7.0.beta.1,<2024.8.0", allow-prereleases = true}
drf-spectacular = {extras = ["sidecar"], version = "^0.27.2"}
# Health check modules
markdown = "^3.5.1"
networkx = "^3.2.1"


[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
ipython = "*"

[tool.poetry.group.test.dependencies]
psutil = "^5.9.8"
pytest = "^8.1.1"
pytest-bdd = "^7.0.1"
pytest-django = "^4.8.0"
pytest-html = "^4.1.1"
pytest-playwright = "^0.4.4"
node-edge = {version = "^0.1.0b6", allow-prereleases = true}
pyyaml = "^6.0.1"

[tool.isort]
profile = "black"
known_first_party = "docker_demo"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "docker_demo.django.settings"
python_files = ["test_*.py", "*_test.py"]
django_debug_mode = true
addopts = ["--output", "bdd/report/results/media", "--screenshot", "on", "--video", "on", "--full-page-screenshot", "--cucumberjson=bdd/report/results/report.json", "--html=bdd/report/results/pytest.html"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
